installment dues flag added , businessshare calculatoins changed